objects/Benifit__c.object
<CustomObject>
    <fields>
        <fullName>Activity_advance__c</fullName>
        <description>object tracking</description>
        <label>Activity advance</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benifit_picklist_updated__c</fullName>
        <label>Benifitpicklistupdated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                    <default>true</default>
                    <label>Modifiedvalue1</label>
                </value>
                <value>
                    <fullName>b</fullName>
                    <label>Modifiedvalue2</label>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrencyIsoCode__c</fullName>
        <label>CurrencyIsoCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field12345</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewCommit_del__c</fullName>
        <label>NewCommit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestActivity_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TestActivity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benifits</relationshipLabel>
        <relationshipName>Benifits_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestActivity_del_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TestActivity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benifits</relationshipLabel>
        <relationshipName>Benifits_del1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>contact_det__c</fullName>
        <label>contact det</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>picklist123__c</fullName>
        <label>picklist123</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>share__c</fullName>
        <label>share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xmlfile__c</fullName>
        <label>xmlfile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Benifit</label>
    <nameField>
        <label>Benifit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benifits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>